--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,7 @@ dependencies = [
     "black>=25.1.0",
     "ipykernel>=6.29.5",
     "lightning>=2.5.0.post0",
+    "matplotlib>=3.10.0",
+    "openpyxl>=3.1.5",
+    "pandas>=2.2.3",
 ]
