--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "lightning>=2.5.0.post0",
     "matplotlib>=3.10.0",
+    "omegaconf>=2.3.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
 ]
