--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,16 +1,19 @@
 model:
+  # input length. should be equat to data.n_peaks_per_sample
+  n_peaks_per_sample: 600
+  
   # Model architecture
   channels: [1, 32, 64, 128]  # [input, conv1, conv2, conv3]
   kernels: [15, 31, 61]  # [conv1, conv2, conv3]
   fc_dims: [64]  # Fully connected layer dimensions
-  # n_beats_per_sample: 600  # RR sequence length
-
+  pool_size: 2
+  stride: 1
+  padding: "same"
+  leaky_relu_slope: 0.01
+  # Small constant added to denominators to prevent division by zero
+  eps: 1.0e-8
   # Training hyperparameters
-  optim:
-    # Optimizer type. Only "adam" is supported currently.
-    optimizer_type: "adam"
-    learning_rate: 0.0001
-    dropout_rate: 0.5
+  dropout: 0.3    
 
 data:
   # path to the hrv data directory
@@ -18,6 +21,9 @@ data:
   # number of peaks per sample
   n_peaks_per_sample: 600  # 600 peaks ~= 10 minutes of recording
 
+  # split
+  split: "train"
+  
   # data loader config params
   train:
     batch_size: 8
