feat: Add class weights configuration for targeted model training
- Introduce class weights in config.yaml to adjust loss computation
- Specify custom weights for diabetes, complications, and DPN classes
- Enhance model's ability to handle class imbalance in HRV classification

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -24,6 +24,9 @@ model:
 
   optim:
     lr: 0.001
+  
+  # class weights for only diabetes, complications, and dpn 
+  class_weights: [1.0, 2.0, 5.0]
 
 data:
   # path to the hrv data directory
