--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ requires-python = ">=3.10"
 dependencies = [
     "black>=25.1.0",
     "h5py>=3.12.1",
+    "hydra-core>=1.3.2",
     "ipykernel>=6.29.5",
     "lightning>=2.5.0.post0",
     "matplotlib>=3.10.0",
     "omegaconf>=2.3.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "torchmetrics>=1.6.1",
     "wandb>=0.12.10",
 ]
