feat: Introduce class-based stride configuration for data processing
- Add 'class_based_stride' parameter to config.yaml to allow configurable strides based on class labels during data chunk generation.
- Update HRVDataset class in data.py to utilize the new stride configuration, enhancing flexibility in data handling for different classes.
- Modify sliding window logic to support class-specific stride values, improving data chunking efficiency.

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -32,6 +32,7 @@ data:
   # split
   slice_strategy: "sliding"  # "sliding" or "chunked"
   data_config: nabian
+  class_based_stride: [1, 1]
 
   min_hrv_threshold: 400
   max_hrv_threshold: 1300
@@ -42,7 +43,6 @@ data:
     shuffle: true
     pin_memory: true
     drop_last: true
-
   val:
     batch_size: 8
     num_workers: 4
